Deleted tests for faster resolution